--- a/project/TaskManagementProject/src/main/resources/application.properties
+++ b/project/TaskManagementProject/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=TaskManagementProject
 spring.datasource.url=jdbc:mysql://localhost:3306/mydatabase
 spring.datasource.username=root
-spring.datasource.password=Kavi$5528
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
@@ -10,6 +10,6 @@ server.port=8092
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=kavitatrivedi2004@gmail.com
-spring.mail.password=fesdxxrpzxyugqfx
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
